Fix CI: checkout wpt-test-gen dependency for replace directive
The wpt-test-gen module uses a local replace directive in go.mod which
requires the repository to be checked out in CI. This adds a checkout
step for wpt-test-gen to all CI jobs before downloading Go modules.

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -33,6 +33,12 @@ jobs:
     steps:
     - uses: actions/checkout@v4
 
+    - name: Checkout wpt-test-gen dependency
+      uses: actions/checkout@v4
+      with:
+        repository: SCKelemen/wpt-test-gen
+        path: ../wpt-test-gen
+
     - name: Set up Go
       uses: actions/setup-go@v5
       with:
@@ -58,6 +64,12 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
+
+    - name: Checkout wpt-test-gen dependency
+      uses: actions/checkout@v4
+      with:
+        repository: SCKelemen/wpt-test-gen
+        path: ../wpt-test-gen
 
     - name: Set up Go
       uses: actions/setup-go@v5
@@ -106,6 +118,12 @@ jobs:
     steps:
     - uses: actions/checkout@v4
 
+    - name: Checkout wpt-test-gen dependency
+      uses: actions/checkout@v4
+      with:
+        repository: SCKelemen/wpt-test-gen
+        path: ../wpt-test-gen
+
     - name: Set up Go
       uses: actions/setup-go@v5
       with:
@@ -127,6 +145,12 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
+
+    - name: Checkout wpt-test-gen dependency
+      uses: actions/checkout@v4
+      with:
+        repository: SCKelemen/wpt-test-gen
+        path: ../wpt-test-gen
 
     - name: Set up Go
       uses: actions/setup-go@v5
