--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -32,12 +32,26 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
+      with:
+        path: layout
 
     - name: Checkout wpt-test-gen dependency
       uses: actions/checkout@v4
       with:
         repository: SCKelemen/wpt-test-gen
-        path: ../wpt-test-gen
+        path: wpt-test-gen
+
+    - name: Checkout text library dependency
+      uses: actions/checkout@v4
+      with:
+        repository: SCKelemen/text
+        path: text
+
+    - name: Checkout unicode library dependency
+      uses: actions/checkout@v4
+      with:
+        repository: SCKelemen/unicode
+        path: unicode
 
     - name: Set up Go
       uses: actions/setup-go@v5
@@ -45,9 +59,11 @@ jobs:
         go-version: ${{ matrix.go-version }}
 
     - name: Download dependencies
+      working-directory: layout
       run: go mod download
 
     - name: Run ${{ matrix.test-group.name }} tests
+      working-directory: layout
       run: |
         echo "Testing: ${{ matrix.test-group.name }}"
         go test -tags no_yaml -v -run "${{ matrix.test-group.pattern }}" -timeout 5m ./...
@@ -64,12 +80,26 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
+      with:
+        path: layout
 
     - name: Checkout wpt-test-gen dependency
       uses: actions/checkout@v4
       with:
         repository: SCKelemen/wpt-test-gen
-        path: ../wpt-test-gen
+        path: wpt-test-gen
+
+    - name: Checkout text library dependency
+      uses: actions/checkout@v4
+      with:
+        repository: SCKelemen/text
+        path: text
+
+    - name: Checkout unicode library dependency
+      uses: actions/checkout@v4
+      with:
+        repository: SCKelemen/unicode
+        path: unicode
 
     - name: Set up Go
       uses: actions/setup-go@v5
@@ -77,12 +107,15 @@ jobs:
         go-version: ${{ matrix.go-version }}
 
     - name: Download dependencies
+      working-directory: layout
       run: go mod download
 
     - name: Run all tests with coverage
+      working-directory: layout
       run: go test -tags no_yaml -v -coverprofile=coverage.out -covermode=atomic -timeout 10m ./...
 
     - name: Generate coverage report
+      working-directory: layout
       run: go tool cover -func=coverage.out
 
     - name: Upload coverage
@@ -90,7 +123,7 @@ jobs:
       uses: codecov/codecov-action@v4
       continue-on-error: true
       with:
-        file: ./coverage.out
+        file: ./layout/coverage.out
         flags: unittests
         name: codecov-layout
 
@@ -117,12 +150,26 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
+      with:
+        path: layout
 
     - name: Checkout wpt-test-gen dependency
       uses: actions/checkout@v4
       with:
         repository: SCKelemen/wpt-test-gen
-        path: ../wpt-test-gen
+        path: wpt-test-gen
+
+    - name: Checkout text library dependency
+      uses: actions/checkout@v4
+      with:
+        repository: SCKelemen/text
+        path: text
+
+    - name: Checkout unicode library dependency
+      uses: actions/checkout@v4
+      with:
+        repository: SCKelemen/unicode
+        path: unicode
 
     - name: Set up Go
       uses: actions/setup-go@v5
@@ -145,12 +192,26 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
+      with:
+        path: layout
 
     - name: Checkout wpt-test-gen dependency
       uses: actions/checkout@v4
       with:
         repository: SCKelemen/wpt-test-gen
-        path: ../wpt-test-gen
+        path: wpt-test-gen
+
+    - name: Checkout text library dependency
+      uses: actions/checkout@v4
+      with:
+        repository: SCKelemen/text
+        path: text
+
+    - name: Checkout unicode library dependency
+      uses: actions/checkout@v4
+      with:
+        repository: SCKelemen/unicode
+        path: unicode
 
     - name: Set up Go
       uses: actions/setup-go@v5
@@ -158,6 +219,7 @@ jobs:
         go-version: '1.21'
 
     - name: Run go fmt
+      working-directory: layout
       run: |
         if [ "$(gofmt -s -l . | wc -l)" -gt 0 ]; then
           echo "Go files are not formatted:"
@@ -166,6 +228,7 @@ jobs:
         fi
 
     - name: Run go vet
+      working-directory: layout
       run: go vet ./...
 
   # Test summary
